[gd_scene load_steps=10 format=2]

[ext_resource path="res://Utilities/Overlays/BookElements/MissionItem.tscn" type="PackedScene" id=1]
[ext_resource path="res://Utilities/Overlays/BookElements/LogEntry.tscn" type="PackedScene" id=2]
[ext_resource path="res://Utilities/Overlays/BookOverlay.gd" type="Script" id=3]
[ext_resource path="res://Assets/Images/ControlPanel/Controls_Page/Control_Panel3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/ControlPanel/Sensors_Page/Sensors.png" type="Texture" id=5]
[ext_resource path="res://Assets/Fonts/NormalTextFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://Utilities/OptionsPanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Images/ControlPanel/Controls_Page/Control_Panel2.png" type="Texture" id=8]
[ext_resource path="res://Assets/Images/ControlPanel/Controls_Page/Control_Panel1.png" type="Texture" id=9]

[node name="BookOverlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OverlayTabs" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="OverlayTabs"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="MarginContainer" type="MarginContainer" parent="OverlayTabs/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="OverlayTabs/PanelContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1005.0
margin_bottom = 581.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Missions" type="Panel" parent="OverlayTabs/PanelContainer/MarginContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 50.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="OverlayTabs/PanelContainer/MarginContainer/TabContainer/Missions"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissionVBox" type="VBoxContainer" parent="OverlayTabs/PanelContainer/MarginContainer/TabContainer/Missions/ScrollContainer"]
margin_right = 992.0
margin_bottom = 522.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MissionItem" parent="OverlayTabs/PanelContainer/MarginContainer/TabContainer/Missions/ScrollContainer/MissionVBox" instance=ExtResource( 1 )]
anchor_right = 0.0
margin_right = 992.0
margin_bottom = 160.0

[node name="MissionItem2" parent="OverlayTabs/PanelContainer/MarginContainer/TabContainer/Missions/ScrollContainer/MissionVBox" instance=ExtResource( 1 )]
anchor_right = 0.0
margin_top = 164.0
margin_right = 992.0
margin_bottom = 324.0

[node name="Journal" type="Panel" parent="OverlayTabs/PanelContainer/MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 50.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="OverlayTabs/PanelContainer/MarginContainer/TabContainer/Journal"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JournalVBox" type="VBoxContainer" parent="OverlayTabs/PanelContainer/MarginContainer/TabContainer/Journal/ScrollContainer"]
margin_right = 992.0
margin_bottom = 522.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="JournalEntry" parent="OverlayTabs/PanelContainer/MarginContainer/TabContainer/Journal/ScrollContainer/JournalVBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 992.0
margin_bottom = 312.0

[node name="Sensors" type="Panel" parent="OverlayTabs/PanelContainer/MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 50.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="OverlayTabs/PanelContainer/MarginContainer/TabContainer/Sensors"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="OverlayTabs/PanelContainer/MarginContainer/TabContainer/Sensors/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 982.0
margin_bottom = 512.0

[node name="TextureRect" type="TextureRect" parent="OverlayTabs/PanelContainer/MarginContainer/TabContainer/Sensors/MarginContainer/ScrollContainer"]
margin_right = 972.0
margin_bottom = 1900.0
rect_min_size = Vector2( 0, 1900 )
size_flags_horizontal = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Panel" parent="OverlayTabs/PanelContainer/MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 50.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="OverlayTabs/PanelContainer/MarginContainer/TabContainer/Controls"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="OverlayTabs/PanelContainer/MarginContainer/TabContainer/Controls/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 982.0
margin_bottom = 512.0
ratio = 1.7
stretch_mode = 1

[node name="ScrollContainer" type="ScrollContainer" parent="OverlayTabs/PanelContainer/MarginContainer/TabContainer/Controls/MarginContainer/AspectRatioContainer"]
margin_left = 59.3
margin_right = 912.7
margin_bottom = 502.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="OverlayTabs/PanelContainer/MarginContainer/TabContainer/Controls/MarginContainer/AspectRatioContainer/ScrollContainer"]
margin_right = 820.0
margin_bottom = 1448.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="OverlayTabs/PanelContainer/MarginContainer/TabContainer/Controls/MarginContainer/AspectRatioContainer/ScrollContainer/VBoxContainer"]
margin_right = 820.0
margin_bottom = 480.0
rect_min_size = Vector2( 800, 480 )
size_flags_horizontal = 3
texture = ExtResource( 9 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="OverlayTabs/PanelContainer/MarginContainer/TabContainer/Controls/MarginContainer/AspectRatioContainer/ScrollContainer/VBoxContainer"]
margin_top = 484.0
margin_right = 820.0
margin_bottom = 964.0
rect_min_size = Vector2( 820, 480 )
size_flags_horizontal = 3
texture = ExtResource( 8 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="OverlayTabs/PanelContainer/MarginContainer/TabContainer/Controls/MarginContainer/AspectRatioContainer/ScrollContainer/VBoxContainer"]
margin_top = 968.0
margin_right = 820.0
margin_bottom = 1448.0
rect_min_size = Vector2( 820, 480 )
size_flags_horizontal = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Panel" parent="OverlayTabs/PanelContainer/MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 50.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsPanel" parent="OverlayTabs/PanelContainer/MarginContainer/TabContainer/Options" instance=ExtResource( 7 )]

[node name="EscapeButton" type="Button" parent="."]
margin_left = 941.0
margin_top = 5.0
margin_right = 1006.0
margin_bottom = 43.0
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = ExtResource( 6 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="EscapeButton" to="." method="_on_EscapeButton_pressed"]
